# yadisk-shadow

./: README.md  pyproject.toml
src/yadisk_shadow/: yadisk_shadow.py
